--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-  " start": "node server.js",
+    "start": "node server.js",
     "build": "vite build",
     "preview": "vite preview",
     "deploy": "gh-pages -d dist"
@@ -13,6 +13,7 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "canvas-confetti": "^1.9.3",
+    "express": "^4.21.2",
     "firebase": "^11.3.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
